[gd_scene load_steps=2 format=3 uid="uid://b362ikkvilv7h"]

[ext_resource type="Script" path="res://characters/enemies/enemy.gd" id="1_uir6y"]

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 11
script = ExtResource("1_uir6y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DamageTickTimer" type="Timer" parent="."]
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="NavTimer" type="Timer" parent="."]

[connection signal="waypoint_reached" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_waypoint_reached"]
[connection signal="timeout" from="NavTimer" to="." method="_on_nav_timer_timeout"]
